CF 6.14 | Add authentification for connections, limit streaming to product show view, specify channel for each product page, show comments in real time, add active job for broadcasting the new comments

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -81,7 +81,9 @@ img {
   background-color: $shade-color;
 }
 
-
+.review-sent {
+  margin-bottom: 30px;
+}
 
 .show-more-link {
   font-size: .8em;
