--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,7 @@
   <div class="rated" data-score="<%= comment.rating %>"></div>
   <p><%= comment.body %></p>
 
-  <% if signed_in? && current_user.admin? %>
+  <% if current_user && current_user.admin? %>
   
   <%= link_to(product_comment_path(comment.product, comment), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-default btn-sm') do %>
   <span class="glyphicon glyphicon-remove"></span> Destroy Review
