CF 6.15 | Change static pages controller for categorie views, add fitting tests

--- a/app/views/static_pages/living.html.erb
+++ b/app/views/static_pages/living.html.erb
@@ -7,7 +7,7 @@
 
   <div class="row">
     <% if @living_products.present? %>
-	    <% @living_products_paginated.each do |product| %>
+	    <% @living_products.each do |product| %>
 	      <%= render partial: "shared/product", locals: {product: product} %>
 	    <% end %>
     <% end %>
