--- a/app/views/static_pages/dining.html.erb
+++ b/app/views/static_pages/dining.html.erb
@@ -8,7 +8,7 @@
   <div class="row">
 
     <% if @dining_products.present? %>
-	    <% @dining_products_paginated.each do |product| %>
+	    <% @dining_products.each do |product| %>
 	      <%= render partial: "shared/product", locals: {product: product} %>
 	    <% end %>
     <% end %>
