--- a/app/views/payments/purchase.html.erb
+++ b/app/views/payments/purchase.html.erb
@@ -8,14 +8,4 @@
       <i class="glyphicon glyphicon-shopping-cart"></i> Do some more shopping
     <% end %>
 </div>
-<div class="container text-center latest_products">
-	<hr>
-	<h3>Have a look at our latest products</h3>
-	<div class="row">
-		<% if @latest_products.present? %>
-		  <% @latest_products.each do |product| %>
-		    <%= render partial: "shared/product", locals: {product: product} %>
-		  <% end %>
-		<% end %>
-	</div>
-</div>
+<%= render partial: "shared/latest_products" %>
