--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,5 +1,5 @@
 
-<div class= "col-sm-3 prod prod-gallery">
+<div class= "col-sm-3 main-content main-content-gallery">
 
     <%= link_to product_path(product) do %> 
       <% if product.product_image? %>
