--- a/app/views/shared/_article.html.erb
+++ b/app/views/shared/_article.html.erb
@@ -1,6 +1,8 @@
 <% cache article do %>
-<div class= "col-sm-3">
-  <%= link_to (image_tag(article.image_url)), article_path(article) %>
+<div class= "col-sm-3 main-content main-content-gallery">
+
+    <%= link_to (image_tag(article.article_image.url(:landing_page_thumb))), article_path(article) %>
+ 
   <header>
     <h5><%= article.title %></h5>
   </header>
