--- a/app/views/shared/_article.html.erb
+++ b/app/views/shared/_article.html.erb
@@ -1,7 +1,7 @@
 <% cache article do %>
 <div class= "col-sm-3 main-content main-content-gallery">
   <% if article.article_image? %> 
-    <%= link_to (image_tag(article.article_image.landing_page_thumb.url.to_s), article_path(article) %>
+    <%= link_to (image_tag(article.article_image.landing_page_thumb.url.to_s)), article_path(article) %>
   % end %>
   <header>
     <h5><%= article.title %></h5>
