--- a/app/views/shared/_article.html.erb
+++ b/app/views/shared/_article.html.erb
@@ -2,7 +2,7 @@
 <div class= "col-sm-3 main-content main-content-gallery">
   <% if article.article_image? %> 
     <%= link_to (image_tag(article.article_image.landing_page_thumb.url.to_s)), article_path(article) %>
-  % end %>
+  <% end %>
   <header>
     <h5><%= article.title %></h5>
   </header>
