--- a/app/views/static_pages/_featured_article.html.erb
+++ b/app/views/static_pages/_featured_article.html.erb
@@ -3,7 +3,7 @@
     <header> 
       <h1><%= featured_article.title %></h1>
       <% if featured_article.subline.present? %>
-        <h2 class="main-article-subline"><%=featured_article.subline %></h2>
+        <h2 class="featured-article-subline"><%=featured_article.subline %></h2>
       <% end %>
     </header>
     <% if featured_article.article_image.url.present? %> 
