--- a/app/views/shared/_latest_articles.html.erb
+++ b/app/views/shared/_latest_articles.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center latest_articles">
+<div class="container latest_articles">
   <hr>
   <h3>Have a look at our latest articles</h3>
   <div class="row">
