More styling landing page article partials

--- a/app/views/shared/_latest_articles.html.erb
+++ b/app/views/shared/_latest_articles.html.erb
@@ -1,6 +1,6 @@
 <div class="container latest_articles">
   <hr>
-  <h3>Have a look at our latest articles</h3>
+  <h3 class="text-center">Have a look at our latest articles</h3>
   <div class="row">
     <% if @latest_articles.present? %>
       <% @latest_articles.each do |article| %>
