CF 6.15 | Add Menu Item for orders, Configured Orders Controller with includes for displaying orders pro user

--- a/app/views/devise/menu/_user_nav.html.erb
+++ b/app/views/devise/menu/_user_nav.html.erb
@@ -11,8 +11,9 @@
         <span>Logout</span>
         <% end %>
       </li>
-      <li><%= link_to('Edit registration', edit_user_registration_path) %></li>
-      <li><a href="#">My Orders</a></li>
+      <li><%= link_to('Your account', edit_user_path(current_user)) %></li>
+      <li><%= link_to('Change login', edit_user_registration_path) %></li>
+      <li><%= link_to('Your orders',  orders_path) %></li>
     </ul>
   </li> 
   <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
