--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
         <div class="circle">
           <span class="glyphicon glyphicon-user"></span>
         </div>
-        <h2>Edit your <%= resource_name.to_s.humanize %> account</h2>
+        <h2>Change Login Credentials</h2>
       </div>
 
       
@@ -13,21 +13,9 @@
 
         <div class="col-sm-6">
           <div class="form-group row">
-            <%= f.label :first_name, class: "control-label col-lg-3" %>
-            <div class="col-lg-9">
-              <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
-            </div>
-          </div>
-          <div class="form-group row">
-            <%= f.label :last_name, class: "control-label col-lg-3" %>
-            <div class="col-lg-9">
-              <%= f.text_field :last_name, class: "form-control" %>
-            </div>
-          </div>
-          <div class="form-group row">
             <%= f.label :email, class: "control-label col-lg-3" %>
             <div class="col-lg-9">
-              <%= f.email_field :email, class: "form-control" %>
+              <%= f.email_field :email, autofocus: true, class: "form-control" %>
             </div>
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
               <div>
