--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,22 +10,28 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="form-group col-sm-6">
-    <%= form.label :first_name, class: "col-sm-3 control-label" %>
-    <div class="form-group col-sm-9">
-      <%= form.text_field :first_name, id: :user_first_name, class: "form-control" %>
+  <div class="row">
+    <div class="form-group">
+      <%= form.label :first_name, class: "col-sm-12 control-label" %>
+      <div class="form-group col-sm-12">
+        <%= form.text_field :first_name, id: :user_first_name, autofocus: true, class: "form-control" %>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group col-sm-6">
-    <%= form.label :last_name, class: "col-sm-3 control-label" %> 
-    <div class="form-group col-sm-9">
-      <%= form.text_field :last_name, id: :user_last_name, class: "form-control" %>
+    <div class="form-group">
+      <%= form.label :last_name, class: "col-sm-12 control-label" %> 
+      <div class="form-group col-sm-12">
+        <%= form.text_field :last_name, id: :user_last_name, class: "form-control" %>
+      </div>
     </div>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Update", class: "btn btn-lg btn-default btn-block" %>
   </div>
-<% end %>
+  <%= link_to :back, class: "btn btn-lg btn-default btn-block" do %>
+    <i class="glyphicon glyphicon-arrow-left"></i>
+    Back
+  <% end %>
+<% end %> 
+ 
