CF 6.15 | Add Menu Item for orders, Configured Orders Controller with includes for displaying orders pro user

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,24 +1,38 @@
 <div class="container">
-  <h1>All Orders</h1>
-  <% @orders.each do |order| %>
-    <div class="row">
-      <%= link_to(order_path(order)) do %>
-        <div class="col-xs-12">
-          <h4>Order # <%= order.id %></h4>    
-        </div>  
-        <div class="col-xs-5">
-          <h5><%= order.product.name %></h5>
-        </div>
-        <div class="col-xs-4">
-          <h5><%= order.product.price %></h5>
-        </div>
-        <div class="col-xs-3">
-        <%= link_to "View Product", order.product %>
-        </div>
-        <div class="col-xs-12">
-          <hr>
-        </div>
-      <% end %>
-    </div> 
+
+  <h1>Orders</h1>
+
+  <% if @orders.present? %>
+
+    <% @orders.each do |order| %>
+      <div class="row">
+        <%= link_to(order_path(order)) do %>
+          <div class="col-xs-12">
+            <h4>Order # <%= order.id %></h4>    
+          </div>  
+          <div class="col-xs-5">
+            <h5><%= order.product.name %></h5>
+          </div>
+          <div class="col-xs-4">
+            <h5><%= order.product.price %></h5>
+          </div>
+          <div class="col-xs-3">
+          <%= link_to "View Product", order.product %>
+          </div>
+          <div class="col-xs-12">
+            <hr>
+          </div>
+        <% end %>
+      </div> 
+    <% end %>
+
+  <% else %>
+    <p> You have not yet ordered any of our great products.</p> 
+    <%= link_to :back, class: "btn btn-lg btn-default" do %>
+    <i class="glyphicon glyphicon-arrow-left"></i>
+      Back
+    <% end %>
+
   <% end %>
+
 </div>
