CF 6.15 | Add Shopping cart - direct link to orders list

--- a/app/views/devise/menu/_user_nav.html.erb
+++ b/app/views/devise/menu/_user_nav.html.erb
@@ -16,8 +16,11 @@
       <li><%= link_to('Your orders',  orders_path) %></li>
     </ul>
   </li> 
-  <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
-  <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+  <li>
+    <%= link_to orders_path do %>
+      <i class="glyphicon glyphicon-shopping-cart"></i>
+    <% end %>
+  </li>
 <% else%>
   <li>
     <%= link_to new_user_session_path do %>
