F 6.15 | Add text notice with amount of found items after a search query

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
 
-  <p id="notice"><%= notice %></p>
+  
 
   <h1>Products</h1>
-
+  <p id="search_notice"><%= @search_notice %></p>
 
   <div class="row prod-inner">
     <% cache(cache_key_for_products) do %>
