Fix responsiveness upper menu

--- a/app/views/devise/menu/_user_nav.html.erb
+++ b/app/views/devise/menu/_user_nav.html.erb
@@ -18,7 +18,7 @@
   </li> 
   <li>
     <%= link_to orders_path do %>
-      <i class="glyphicon glyphicon-shopping-cart"></i>
+      <span class="glyphicon glyphicon-shopping-cart"></span>
     <% end %>
   </li>
 <% else%>
