Change zoom feature fit for mobile view

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -101,3 +101,10 @@ img {
  color: $secondary-color; 
 }
 
+// .zoomWindowContainer {
+//   width: 300px !important;
+// }
+
+#before_purchase_modal {
+  max-width: 300px; 
+}
