--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -22,10 +22,9 @@ $(document).on('turbolinks:load ajaxSuccess', function() {
 
   refreshRating();
 
-  $(".img_zoom").elevateZoom({
-    zoomType  : "lens",
-    lensShape : "round",
-    lensSize  : 200
+  $("#zoom").elevateZoom({
+  zoomType: "inner",
+  cursor: "crosshair"
   });
 
 });
