--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
 
       <p>
         <strong>Average rating:</strong> 
-        <span class="rated" data-score="<%= @product.average_rating %>"></span> 
+        <span id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></span> 
       </p>
 
       <h5>
